...
                                        <connections>
                                            <action selector="signupButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kj8-dp-hKU"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rQD-Ht-rHB">
                                        <rect key="frame" x="0.0" y="324.33333333333331" width="361" height="34.333333333333314"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showViewControllerButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Show ViewController"/>
                                        <connections>
                                            <action selector="showButtonViewControllerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n5S-eX-dvO"/>
                                        </connections>
                                    </button>
...
